bundles/agw-okta-mcp/40-mcp-route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: mcp
  namespace: agentgateway-system
spec:
  parentRefs:
  - name: agw
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /mcp
      backendRefs:
      - name: mcp-backend
        group: enterpriseagentgateway.solo.io
        kind: EnterpriseAgentgatewayBackend
