bundles/agw-okta-mcp/41-mcp2-route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: mcp2
  namespace: agentgateway-system
spec:
  parentRefs:
  - name: agw
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /tools
      backendRefs:
      - name: mcp2-backend
        group: agentgateway.dev
        kind: AgentgatewayBackend
